--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -63,7 +63,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string notr="true">0.3.666-beta</string>
+          <string notr="true">0.8.0.0 - Life</string>
          </property>
          <property name="textFormat">
           <enum>Qt::RichText</enum>
@@ -97,8 +97,9 @@
         <string>
           Copyright © 2009-2012 Bitcoin Developers
           Copyright © 2011-2012 Litecoin Developers
-          Copyright © 2013 42 Developers
-
+          Copyright © 2013 - 2014 42 Developers
+		  Copyright © 2014 - 2015 42 Community Developer (SoopY452000)
+		  
           This is experimental software.
 
           Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php.
