--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -202,6 +202,16 @@
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap>../res/icons/bitcoin.png</pixmap>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -294,6 +304,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+<resources>
+  <include location="../bitcoin.qrc"/>
+ </resources>
  <connections/>
 </ui>
+
