KGW TW Fixed , OpenSSL HeartBleed Addressed
KGW TW Fixed , Tweaked , Checkpointed , Version Bumped to 0.8.0.0
,Hardfork at Block 159625 , OpenSSL HeartBleed Security Vulnerability
Addressed.

--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -98,7 +98,7 @@
           Copyright © 2009-2012 Bitcoin Developers
           Copyright © 2011-2012 Litecoin Developers
           Copyright © 2013 - 2014 42 Developers
-		  Copyright © 2014 - 2015 42 Community Developer (SoopY452000)
+		  Copyright © 2014 - 2015 SherlockCoin Developers
 		  
           This is experimental software.
 
