--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>573</width>
-    <height>342</height>
+    <height>451</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -202,16 +202,6 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap>../res/icons/bitcoin.png</pixmap>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
    <item>
@@ -300,13 +290,22 @@
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="../bitcoin.qrc">:/icons/bitcoin</pixmap>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
-<resources>
+ <resources>
   <include location="../bitcoin.qrc"/>
  </resources>
  <connections/>
 </ui>
-
